---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: ???
  Changes:
    - Added pressed tofu which can make vegan jerky.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025.5.27
  Changes:
    - Fixed locale files of calknut and guar products
    - Added back calknut and guar recipes
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025.5.27
  Changes:
    - Changed the name of soybean and coconut.
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025.5.26
  Changes:
    - Ported everything to 2.0
---------------------------------------------------------------------------------------------------
Version: 0.0.22
Date: 2020.11.04
  Changes:
    - Buffed rocket fuel from pseudodaemonas yields.

  Bugfixes:
    - Fixed a crash caused by composting silos consuming more items than they contain.
    - Fixed some broken recipe icons.

---------------------------------------------------------------------------------------------------
Version: 0.0.21
Date: 2020.04.20
  Changes:
    - Plant Breeding, Cultivation Expertise and Biotechnology now affect the new machines of pyal
    - I know that Cultivation Expertise and the speed-part of Biotechnology don't work as intended together with pyal's plants-as-modules system. But I can't fix this without quickly running into limitations of the factorio engine.

  Bugfixes:
    - Fixed a loading error caused by an outdated alteration to pyanodons prototypes which don't even exist anymore

---------------------------------------------------------------------------------------------------
Version: 0.0.20
Date: 2020.01.28
  Changes:
    - Update for factorio 0.18
