@@ -71,6 +71,7 @@ blood-bag=Blood Bag
 
 vrauk-molt=Vrauk Molt
 vrauk-frass=Vrauk Frass
+non-viable-vrauk-mass=Non-viable Vrauk Mass
 
 [item-description]
 pyv-hidden=This is supposed to be hidden. If you can read this, then another mod does not value my privacy.
@@ -94,6 +95,7 @@ protein=A wild mixture of polypeptides.
 
 vrauk-molt=The Once-was Exoskeleton of a Vrauk
 vrauk-frass=The poop of a Vrauk
+non-viable-vrauk-mass=Mass of Vrauk bits, unable to breathe or feel. Some diassembly required!
 
 [fluid-name]
 solfaen=Rhodophyta Solfaen
@@ -226,6 +228,10 @@ generate-engineer-blood=Donate Blood
 vrauk-molting=Vrauk Molting
 vrauk-frass=Vrauk Frassing
 vrauk-molting-with-frass=Vrauk Molting with Frass
+vrauk-frass-to-formic-acid=Vrauk Frass to Formic Acid
+synthetic-vrauk-meat=Synthetic Vrauk Meat Printing
+synthetic-non-viable-vrauk-mass=Synthetic Non-viable Vrauk Mass
+render-non-viable-vrauk-mass=Full render Non-viable Vrauk Mass
 
 [recipe-description] 
 grow-tiriscefing-willow-2=They love to eat this carbon gas. 
